--- a/styles.css
+++ b/styles.css
@@ -246,11 +246,12 @@ border-radius: 8; /* Remove the circular shape */
     border-bottom: 2px solid #9381ff;
     border-right: 2px solid #9381ff;
 }
-.project{
+.experience{
     padding: 0.5rem 6%;
     width: 90%;
+    margin-top: 10px;
 }
-.project h3{
+.experience h3{
     text-align: center;
     color: #9381ff;
     text-align: center;
@@ -274,20 +275,20 @@ border-radius: 8; /* Remove the circular shape */
     gap: 130px;
     width: 100%;
 }
-.project p{
+.experience p{
     width: 100%;
     text-align: center;
     color: darkslateblue;
     font-size: 14px;
 }
-.project .list .info{
+.experience .list .info{
     width: 100%;
     justify-content: center;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.project .list .info a{
+.experience .list .info a{
     margin: 10px;
     padding: 5px;
     color: darkblue;
@@ -357,7 +358,7 @@ border-radius: 8; /* Remove the circular shape */
     opacity: 1;
 }
 
-.project .obj.active {
+.experience .obj.active {
     display: block;
 }
 
@@ -452,27 +453,3 @@ footer{
 }
 
 
-@media (max-width:768px){
-    .header .box{
-        display: flex;
-        flex-direction: column-reverse;
-    }
-    .project{
-        width: 100%;
-        justify-content: center;
-    }
-    .project .projects .list{
-        justify-content: center;
-    }
-    .project .projects .list .list1,
-    .project .projects .list .list2,
-    .project .projects .list .list3,
-    .project .projects .list .list4,
-    .project .projects .list .list5{
-        justify-content: center;
-        text-align: center;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-}
