--- a/styles.css
+++ b/styles.css
@@ -509,4 +509,51 @@ footer {
 .social-icons a:hover {
     color: #9381ff;
 }
+/* ------------------------contact form css----------------- */
+ .contact-form-section {
+    padding: 0rem 6%;
+    background-color: #1a237e;
+    text-align: center;
+}
+
+.contact-form-section form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 500px;
+    margin: 0 auto;
+    background: #f8f7fb;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(1,1,1,1);
+}
+
+.contact-form-section input,
+.contact-form-section textarea {
+    padding: 0.75rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 1rem;
+    width: 100%;
+}
+
+.contact-form-section button {
+    padding: 0.75rem;
+    background: #9381ff;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.contact-form-section button:hover {
+    background: darkslateblue;
+} */
+ 
+
+
+
+
 
