--- a/styles.css
+++ b/styles.css
@@ -550,10 +550,6 @@ footer {
 
 .contact-form-section button:hover {
     background: darkslateblue;
-} */
- 
-
-
-
-
+} 
+/* --------------------whatsapp css--------------- */
 
